[project]
name = "vouch-runtime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pooja Garg", email = "pooja.brown@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.3",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.45.0",
]

[project.scripts]
vouch-runtime = "vouch_runtime:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
